hphp/hack/test/typecheck/shape24.php.exp
File "shape24.php", line 17, characters 10-11:
Invalid return type (Typing[4057])
File "shape24.php", line 16, characters 15-15:
The field 'z' is missing
File "shape24.php", line 16, characters 22-22:
The field 'z' is defined
